improve batch_get interface

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,6 +43,7 @@ jobs:
         cargo clippy --release -- -D warnings
         cargo llvm-cov --version && cargo nextest --version
         cargo llvm-cov nextest
+        cargo test --doc
         cargo llvm-cov report --cobertura --output-path target/llvm-cov-target/cobertura.xml
 
     - name: Run CLI
